added portrait spinner overlay to show the user when he has to rotate the molbile device to portrait mode

--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ h1 {
     text-shadow: 2px 2px 8px rgba(0 0 0 / 0.8);
 }
 
+.overlay-landscape-spinner {
+    display: none;
+}
+
 #overlays {
     width: 1280px;
     height: 720px;
@@ -603,11 +607,12 @@ canvas {
 @media only screen and (max-height: 720px) {
     #overlays {
         height: 100vh;
-        width: calc((100vh / 56.25) * 100);
+        width: calc(100vh * (1280 / 720));
     }
 
     button,
     .binding,
+    .key,
     .text-settings {
         font-size: clamp(16px, calc(38 / 720 * 100vh), 38px);
     }
@@ -807,6 +812,98 @@ canvas {
     }
 }
 
+@media only screen and (orientation: portrait) and (max-width: 1040px) and (pointer: coarse) {
+    .overlay-landscape-spinner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: black;
+        z-index: 5;
+    }
+
+    .landscape-spinner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 92px;
+        height: 180px;
+        border-radius: 8px;
+        transform: translateY(-30px);
+        background-color: whitesmoke;
+        background-image:
+            radial-gradient(ellipse at center, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 4%, rgba(81, 81, 81, 1) 14%, rgba(44, 44, 44, 1) 26%, rgba(2, 2, 2, 1) 53%, rgba(2, 2, 2, 1) 65%, rgba(2, 2, 2, 0) 66%),
+            linear-gradient(grey, grey);
+        background-repeat: no-repeat;
+        background-size: 10px 10px, 84px 162px;
+        background-position: center 2px, 4px 8px;
+        transform: rotate(270deg);
+        animation: rotateToLandscape 2s ease-in-out infinite, glowingBorder 2s ease-in-out infinite;
+    }
+
+    .spinner-ring {
+        width: 48px;
+        height: 48px;
+        display: inline-block;
+        position: relative;
+        border: 3px solid;
+        border-color: #de3500 #0000 #fff #0000;
+        border-radius: 50%;
+        box-sizing: border-box;
+        animation: 3s rotate linear infinite;
+    }
+
+    .spinner-ring:before,
+    .spinner-ring:after {
+        content: '';
+        top: 0;
+        left: 0;
+        position: absolute;
+        border: 10px solid transparent;
+        border-bottom-color: #fff;
+        transform: translate(-10px, 19px) rotate(-35deg);
+    }
+
+    .spinner-ring:after {
+        border-color: #de3500 #0000 #0000 #0000;
+        transform: translate(32px, 3px) rotate(-35deg);
+    }
+
+    @keyframes rotate {
+        100% {
+            transform: rotate(360deg)
+        }
+    }
+
+    @keyframes rotateToLandscape {
+        0% {
+            transform: rotate(0deg);
+        }
+        50%, 100% {
+            transform: rotate(90deg);
+        }
+    }
+
+    @keyframes glowingBorder {
+        0% {
+            box-shadow: 0 0 50px orangered;
+        }
+
+        50% {
+            box-shadow: 0 0 50px lightgreen;
+        }
+
+        100% {
+            box-shadow: 0 0 50px lightgreen;
+        }
+    }
+}
+
 @media only screen and (max-width: 825px) {
     .keybindings-row {
         gap: 35px;
@@ -872,10 +969,6 @@ canvas {
         margin: 30.4% 0 0 2%;
     }
 
-    .text-settings {
-        line-height: 16px;
-    }
-
     .container-keybindings {
         width: 65%;
     }
@@ -885,7 +978,9 @@ canvas {
         gap: 5px;
     }
 
-    .binding {
+    .binding,
+    .key,
+    .text-settings {
         line-height: 16px;
     }
 
