--- a/style.css
+++ b/style.css
@@ -201,9 +201,28 @@ h1 {
     background-repeat: no-repeat;
 }
 
+#last-row {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 230 / 85;
+    display: flex;
+    justify-content: flex-end;
+    gap: 3%;
+}
+
+.menu-button-half {
+    height: 60%;
+    width: auto;
+    aspect-ratio: 230 / 85;
+    background: url(./img/menu-screens/buttons/menu-button.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 .menu-button-sm {
-    width: 26%;
-    height: 26%;
+    height: 100%;
+    width: auto;
+    aspect-ratio: 1 / 1;
 }
 
 #header-img-settings {
