--- a/style.css
+++ b/style.css
@@ -415,11 +415,11 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 #header-img-imprint {
-    margin: 2.4% 0 2.4% 0;
+    margin: 2.4% 0 0 0;
     width: 50.2%;
     height: auto;
     aspect-ratio: 643 / 130;
@@ -428,84 +428,64 @@ h1 {
     background-repeat: no-repeat;
 }
 
-#container-imprint-text a {
+.container-imprint-text {
+    width: 70%;
+    height: 40%;
+    padding: 10px 30px;
+    border-radius: 10px;
+    overflow-y: scroll;
+    background-color: rgba(255 255 255 / 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+.container-imprint-text::-webkit-scrollbar {
+    width: clamp(5px, calc(10 / 1280 * 100vw), 10px);
+    background-color: rgba(0 0 0 / 0.2);
+    border-radius: 10px;
+}
+
+.container-imprint-text::-webkit-scrollbar-thumb {
+    background-color: #4aceff;
+    border-radius: 5px;
+    border-radius: 10px;
+}
+
+.container-imprint-text::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
+.container-imprint-text-first-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+#imprint a {
     color: #4aceff;
     text-shadow: 2px 2px 2px rgba(0 0 0 / 1);
     text-decoration: none;
 }
 
-#container-imprint-text a:hover {
+#imprint a:hover {
     text-decoration: underline;
 }
 
-#container-imprint-text h3 {
-    margin-bottom: 2%;
+#imprint h3 {
+    margin-bottom: 1%;
     font-family: Chewy;
     font-size: clamp(16px, calc(40 / 1280 * 100vw), 40px);
     color: #4aceff;
     text-shadow: 2px 2px 8px rgba(0 0 0 / 0.8);
 }
 
-#container-imprint-text p,
+#imprint p,
 #imprint ul {
-    font-size: clamp(16px, calc(32 / 1280 * 100vw), 32px);
+    font-size: clamp(12px, calc(32 / 1280 * 100vw), 32px);
 }
 
-#container-imprint-text ul {
+#imprint ul {
     list-style: none;
-}
-
-.container-imprint-buttons {
-    width: 50%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 5%;
-}
-
-.container-imprint-text {
-    width: 70%;
-    height: 80%;
-    display: flex;
-}
-
-#imprint-close {
-    min-width: 40px;
-    height: 40px;
-    border: 2px solid #3b8ae6;;
-    border-radius: 5px;
-    background: transparent;
-    font-size: 32px;
-    font-weight: bold;
-    color: #3b8ae6;
-}
-
-#imprint-close:hover {
-    background: rgba(74 206 255 / 0.2);
-}
-
-.container-template-content {
-    min-width: 100%;
-    display: flex;
-    gap: 5%;
-}
-
-.container-template-text {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.container-template-text div {
-    width: 100%;
-    display: flex;
-    gap: 5%;
-}
-
-.imprint-row {
-    width: 100%;
-    display: flex;
-    gap: 5%;
 }
 
 #penguin-animated {
@@ -615,6 +595,13 @@ canvas {
     margin: 0;
     display: block;
     background-color: black;
+}
+
+@media screen and not (-webkit-min-device-pixel-ratio:0) {
+    .container-imprint-text {
+        scrollbar-width: thin;
+        scrollbar-color: #4aceff;
+    }
 }
 
 @media only screen and ((max-width: 1280px) and (min-aspect-ratio: 16/9)) {
@@ -897,6 +884,10 @@ canvas {
     .margin-sm {
         margin: 6% 0 0 7%;
     }
+
+    .container-imprint-text {
+        padding: 10px 20px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -910,6 +901,10 @@ canvas {
 
     #button-imprint {
         font-size: 12px;
+    }
+
+    .container-imprint-text-first-row div:last-of-type {
+        margin-left: 30px;
     }
 }
 
@@ -961,8 +956,9 @@ canvas {
         line-height: 18px;
     }
 
-    .btn-imprint {
-        font-size: 14px;
+    .container-imprint-text-first-row div:last-of-type {
+        overflow-wrap: break-word;
+        hyphens: manual;
     }
 }
 
@@ -981,10 +977,6 @@ canvas {
 
     #button-imprint {
         font-size: 10px;
-    }
-
-    .btn-imprint {
-        font-size: 12px;
     }
 }
 
