--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ h1 {
     margin: 0 0 20px 20px;
     width: 200px;
     height: 100px;
-    border: 1px solid green;
 }
 
 #walk-left {
@@ -116,7 +115,6 @@ h1 {
     margin: 0 20px 20px 0;
     width: 200px;
     height: 100px;
-    border: 1px solid red;
 }
 
 #jump {
@@ -131,14 +129,6 @@ h1 {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-#mobile-controls-settings {
-    margin-left: 20px;
-    width: 100px;
-    height: 200px;
-    flex-direction: column;
-    border: 1px solid yellow;
 }
 
 #mobile-sound-mute {
@@ -158,7 +148,11 @@ h1 {
 .mobile-control-button {
     width: 100px;
     height: 100px;
-    border: 1px solid white;
+    filter: drop-shadow(0 0 7px rgba(0 0 0 / 0.9));
+}
+
+.mobile-control-button:active {
+    filter: drop-shadow(0 0 7px white);
 }
 
 .settings-screen {
