adjusted font family and opacity on imprint page to boost contrast

--- a/styles/font.css
+++ b/styles/font.css
@@ -7,3 +7,8 @@
     font-family: Chewy;
     src: url('../font/Chewy/Chewy-Regular.ttf');
 }
+
+@font-face {
+    font-family: Poiret;
+    src: url('../font/Poiret_One/PoiretOne-Regular.ttf');
+}
