--- a/style.css
+++ b/style.css
@@ -426,9 +426,9 @@ h1 {
     width: 70%;
     height: 40%;
     padding: 10px 30px;
-    border-radius: 10px;
+    border-radius: 10px 3px 3px 10px;
     overflow-y: scroll;
-    background-color: rgba(255 255 255 / 0.1);
+    background-color: rgba(255 255 255 / 0.3);
     display: flex;
     flex-direction: column;
     gap: 35px;
@@ -475,6 +475,8 @@ h1 {
 
 #imprint p,
 #imprint ul {
+    font-family: Poiret;
+    font-weight: 600;
     font-size: clamp(12px, calc(32 / 1280 * 100vw), 32px);
 }
 
